--- a/Group_Project_Python_II-Modcloth.ipynb
+++ b/Group_Project_Python_II-Modcloth.ipynb
@@ -1099,7 +1099,7 @@
    "id": "d66fb827",
    "metadata": {},
    "source": [
-    "## Creationg the Object"
+    "## Creating the Object"
    ]
   },
   {
